--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@teachablemachine/image": "^0.8.5",
     "@tensorflow/tfjs": "^1.3.1",
+    "dynamsoft-barcode-reader-bundle": "10.2.1000",
+    "dynamsoft-camera-enhancer": "^4.0.3",
+    "dynamsoft-javascript-barcode": "^9.6.42",
     "firebase": "^10.12.5",
     "next": "14.2.5",
     "quagga": "^0.12.1",
